--- a/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
+++ b/EvaluacionFinal5/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu_main"
-        android:theme="@style/NavViewTheme"/>
+        android:theme="@style/NavViewTheme"
+        app:headerLayout="@layout/nav_drawer_head" />
 
 </android.support.v4.widget.DrawerLayout>
