--- a/EvaluacionFinal6/app/src/main/res/layout/fragment_parking.xml
+++ b/EvaluacionFinal6/app/src/main/res/layout/fragment_parking.xml
@@ -5,11 +5,20 @@
     android:layout_height="match_parent"
     tools:context="com.exercises.sart1991.evaluacionfinal6.ParkingFragment">
     
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/card_recycler"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+    
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="48dp"
         android:tint="@android:color/white"
         app:srcCompat="@android:drawable/ic_input_add"
         app:layout_constraintRight_toRightOf="parent"
